tests/snapshots/examples_fixtures/diagnostics__ModuleGraph__ModuleGraphCycleB.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/ModuleGraph/ModuleGraphCycleB.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `ModuleGraph.ModuleGraphCycleB` doesn't match file path `examples/diagnostics/ModuleGraph/ModuleGraphCycleB.flx`.

  examples/diagnostics/ModuleGraph/ModuleGraphCycleB.flx:7:1
  |
7 | module ModuleGraph.ModuleGraphCycleB {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
